2006-04-18  John W. Eaton  <jwe@octave.org>

	* randmtzig.c (randmt, randi53, randi54, randi64, randu32, randu53):
	Omit inline from decl.

	* Sparse.cc (Sparse<T>::index): Use std::vector<bool> to avoid
	local array with variable dimension.

2006-04-16  John W. Eaton  <jwe@octave.org>

	* lo-sstream.h: Delete.
	* Makefile.in (INCLUDES): Remove it from the list.

	* dim-vector.h (dim_vector::str): Use std::ostringstream directly.
	* Sparse.cc (Sparse::range_error): Likewise.
	* DASSL.cc (DASSL::error_message): Likewise.
	* LSODE.cc (LSODE::error_message): Likewise.
	* DASRT.cc (DASRT::error_message): Likewise.
	* DASPK.cc (DASPK::error_message): Likewise.
	* Array.cc (Array::range_error): Likewise.

	* kpse.cc (kpse_hash): Rename from hash.
	(hash_lookup): Call kpse_hash instead of hash.

	* SparseType.cc (SparseType::SparseType): Use std::vector<bool>
	to avoid local array with variable dimension.

2006-04-13  David Bateman  <dbateman@free.fr>

        * Sparse.cc (assign (Sparse<LT>&, const Sparse<RT>&)):
	Optimize assignment.

2006-04-13  John W. Eaton  <jwe@octave.org>

        * Sparse.cc (assign (Sparse<LT>&, const Sparse<RT>&)):
	Eliminate unnecessary casts.
	* SparsedbleLU.cc (SparseLU::SparseLU): Likewise.

	* kpse.cc (fopen): Use reinterpret_cast instead of C-style cast.
	(log_search, dir_links): Use static_cast instead of C-style cast.

	* prog-args.cc (args::getopt): Use reinterpret_cast instead of X_CAST.
	* oct-alloc.cc (allocator::grow): Likewise.
	* CSparse.cc (SparseComplexMatrix::determinant,
	SparseComplexMatrix::factorize, SparseComplexMatrix::fsolve):
	Likewise.
	* SparseCmplxLU.cc (SparseComplexLU::SparseComplexLU): Likewise.

	* oct-sort.cc (roundupsize, octave_sort<T>::merge_getmem):
	Use static_cast instead of C-style cast.
	* CSparse.cc (SparseComplexMatrix::fsolve): Likewise.
	* dSparse.cc (SparseMatrix::fsolve): Likewise.

	* data-conv.cc (LS_DO_WRITE): Use static_cast for value conversion.
	Use OCTAVE_LOCAL_BUFFER instead of new/delete.